# Math_Stuff

./: .gitignore  .syntastic_c_config  CMakeLists.txt
factor/: primes_table.c  primes_table.h  trial_division.c
src/: CMakeLists.txt
src/elliptic_curves/: CMakeLists.txt  elliptic.c  elliptic.h  elliptic_curve_montgomery_affine.c  elliptic_curve_weierstrass_affine.c  elliptic_curve_weierstrass_projective.c
src/factor/: CMakeLists.txt  elliptic.c  factor.h  fermat.c  pollard_p_1.c  pollard_rho.c  primes_table.c  quadratic_sieve.c  shanks.c  trial_division.c
src/montgomery_multiplication/: CMakeLists.txt  mont.c  mont.h
src/prime/: CMakeLists.txt  is_prime.c  prime.h  primes_table.c
test/: CMakeLists.txt
test/elliptic_curves/: CMakeLists.txt  elliptic_double.c  elliptic_double_montgomery_affine.c  elliptic_double_weierstrass_affine.c  elliptic_double_weierstrass_projective.c  elliptic_mul.c  elliptic_mul_montgomery_affine.c  elliptic_mul_weierstrass_affine.c  elliptic_mul_weierstrass_projective.c  elliptic_sum.c  elliptic_sum_montgomery_affine.c  elliptic_sum_weierstrass_affine.c  elliptic_sum_weierstrass_projective.c
test/factor/: CMakeLists.txt  elliptic.c  factor_trial_division.c  fermat.c  pollard_p_1.c  pollard_rho.c  pollard_rho2.c  pollard_rho3.c  pollard_rho4.c  prime_test.c  quadratic_sieve.c  shanks.c
test/montgomery_multiplication/: CMakeLists.txt  mont_mul.c  mont_pow.c  mont_pow_mpz.c
